--- a/hello/views/index.jade
+++ b/hello/views/index.jade
@@ -2,16 +2,76 @@ extends layout
 
 block content
 	h1= title
-	p Welcome to #{title}
+	p 当前在线人数 #{title}
 
 	ul#messages
 
 
 	form(action="") 
 		input#m(autocomplete="off")
-		button Send
+		button#submit Send
+		button#exit(type = "button") Exit
+		button#clear(type = "button") Clear
 
 
 	script(src="/javascripts/socket.io.js")
 	script(src="http://code.jquery.com/jquery-1.11.1.js")
-	script var socket = io();$('form').submit(function(){socket.emit('chat message', $('#m').val());$('#m').val('');return false;});socket.on('chat message', function(msg){$('#messages').append($('<li>').text(msg));});
+	script.
+		
+		var name = location.search.split("=")[1];
+		var socket = {};
+		if(!!name){
+			socket = io();
+			socket.emit('login', {"name":name});
+		}
+
+		$('form').submit(function(){
+			var obj={
+				"name":name,
+				"value":$('#m').val()
+			}
+			socket.emit('chat message', obj);
+			$('#m').val('');return false;
+		});
+		socket.on('chat message', function(obj){
+			var html=[
+					obj.name,
+					'说:',
+					obj.value
+				].join(""); 
+			$('#messages').append($('<li>').text(html));
+		});
+		
+		socket.on('login',function(obj){
+			var html=[
+					'欢迎',
+					obj.name,
+					'登陆',
+					'     ',
+					'当前聊天室内共',
+					obj.onlineCount,
+					'名游客'
+				].join(""); 
+			$('#messages').append($('<li>').text(html));
+		});
+		socket.on('logout',function(obj){
+			var html=[
+				obj.name,
+				'退出',
+				'当前剩余',
+				obj.onlineCount,
+				'名游客'
+			].join(""); 
+			$('#messages').append($('<li>').text(html));
+		});
+		socket.on('close',function(msg){
+			$('#messages').append($('<li>').text(msg));
+		});
+		$('#exit').click(function(){
+
+			socket.emit('logout', {"name":name});
+			location.href = "/";
+		});
+		$('#clear').click(function(){
+			$('#messages').empty();
+		});
