--- a/hello/views/login.jade
+++ b/hello/views/login.jade
@@ -1,9 +1,8 @@
 extends layout
 
 block content
-	h1= title
-	p Welcome to #{title}
-	p 请输入你的用户名
+	h1 Welcome to #{title}
+	p 请在下方输入框内输入你的用户名
 	form(action="") 
 		input#mm()
 		button Send
